WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175132
Fix parsing of <meta http-equiv=refresh> to allow time starting with a '.' without a leading 0
https://bugs.webkit.org/show_bug.cgi?id=175132
Summary
Fix parsing of <meta http-equiv=refresh> to allow time starting with a '.' wi...
Anne van Kesteren
Reported
2017-08-03 06:32:17 PDT
Due to a change to the HTML Standard discussed at
https://github.com/whatwg/html/issues/2844
we ended up regressing
bug 161543
: html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/parsing.html Apologies for the late notice, I didn't catch this during review.
Attachments
Patch
(26.49 KB, patch)
2017-08-03 15:54 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-elcapitan
(999.90 KB, application/zip)
2017-08-03 16:57 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews115 for mac-elcapitan
(1.77 MB, application/zip)
2017-08-03 17:18 PDT
,
Build Bot
no flags
Details
Patch
(28.34 KB, patch)
2017-08-03 19:35 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(28.37 KB, patch)
2017-08-03 19:44 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-08-03 15:54:29 PDT
Created
attachment 317171
[details]
Patch
Build Bot
Comment 2
2017-08-03 16:56:59 PDT
Comment on
attachment 317171
[details]
Patch
Attachment 317171
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/4249313
New failing tests: imported/w3c/web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/allow-scripts-flag-changing-1.html imported/w3c/web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/allow-scripts-flag-changing-2.html
Build Bot
Comment 3
2017-08-03 16:57:00 PDT
Created
attachment 317181
[details]
Archive of layout-test-results from ews103 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 4
2017-08-03 17:18:49 PDT
Comment on
attachment 317171
[details]
Patch
Attachment 317171
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/4249332
New failing tests: imported/w3c/web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/allow-scripts-flag-changing-1.html imported/w3c/web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/allow-scripts-flag-changing-2.html
Build Bot
Comment 5
2017-08-03 17:18:51 PDT
Created
attachment 317184
[details]
Archive of layout-test-results from ews115 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Chris Dumez
Comment 6
2017-08-03 19:35:36 PDT
Created
attachment 317201
[details]
Patch
Chris Dumez
Comment 7
2017-08-03 19:44:22 PDT
Created
attachment 317205
[details]
Patch
WebKit Commit Bot
Comment 8
2017-08-03 21:37:14 PDT
Comment on
attachment 317205
[details]
Patch Clearing flags on attachment: 317205 Committed
r220252
: <
http://trac.webkit.org/changeset/220252
>
WebKit Commit Bot
Comment 9
2017-08-03 21:37:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2017-08-03 21:38:14 PDT
<
rdar://problem/33716804
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug