Fix parsing of <meta http-equiv=refresh> to allow time starting with a '.' without a leading 0 https://bugs.webkit.org/show_bug.cgi?id=175132

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Re-sync WPT tests from upstream c8bf1bbe9296. This extends test coverage.

* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/allow-scripts-flag-changing-1-expected.txt:
* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/allow-scripts-flag-changing-2-expected.txt:
* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/moving-documents-expected.txt: Removed.
* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/parsing-expected.txt:
* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/parsing.html:
* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/remove-from-document-expected.txt: Added.
* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/remove-from-document.html: Renamed from LayoutTests/imported/w3c/web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/moving-documents.html.
* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/support/refresh.sub.html: Added.
* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/support/w3c-import.log:
* web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/w3c-import.log:

Source/WebCore:

Fix parsing of <meta http-equiv=refresh> to allow time starting with a '.', without
a leading 0. This is as per https://github.com/whatwg/html/pull/2852.

The latest spec is at:
- https://html.spec.whatwg.org/multipage/semantics.html#attr-meta-http-equiv-refresh

Test: imported/w3c/web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/parsing.html

* html/parser/HTMLParserIdioms.cpp:
(WebCore::parseHTTPRefreshInternal):

LayoutTests:

* TestExpectations:
Mark as flaky tests that used to not run because they were missing a subresource. Now that I imported
this subresource, the tests run but are failing. When they fail, those tests are flaky due to the lines
they log.

* tests-options.json:


Canonical link: https://commits.webkit.org/191915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220252 268f45cc-cd09-0410-ab3c-d52691b4dbfc